--- a/apiresponses/CorpOrg/assemblies/landline/transition/environments/prod/platforms/app-platform.json
+++ b/apiresponses/CorpOrg/assemblies/landline/transition/environments/prod/platforms/app-platform.json
@@ -60,7 +60,7 @@
             "ciState": "default",
             "comments": "",
             "created": 1398384830653,
-            "createdBy": "klohia",
+            "createdBy": "ohall",
             "execOrder": 0,
             "impl": null,
             "isActiveInRelease": false,
@@ -122,7 +122,7 @@
             "ciState": "default",
             "comments": "",
             "created": 1398385033043,
-            "createdBy": "klohia",
+            "createdBy": "ohall",
             "execOrder": 0,
             "impl": null,
             "isActiveInRelease": false,
@@ -184,7 +184,7 @@
             "ciState": "default",
             "comments": "",
             "created": 1398384240392,
-            "createdBy": "klohia",
+            "createdBy": "ohall",
             "execOrder": 0,
             "impl": null,
             "isActiveInRelease": false,
@@ -246,7 +246,7 @@
             "ciState": "default",
             "comments": "",
             "created": 1391823273684,
-            "createdBy": "akaush1",
+            "createdBy": "ohall",
             "execOrder": 0,
             "impl": null,
             "isActiveInRelease": false,
@@ -308,7 +308,7 @@
             "ciState": "default",
             "comments": "",
             "created": 1391822686447,
-            "createdBy": "akaush1",
+            "createdBy": "ohall",
             "execOrder": 0,
             "impl": null,
             "isActiveInRelease": false,
@@ -370,7 +370,7 @@
             "ciState": "default",
             "comments": "",
             "created": 1392336608778,
-            "createdBy": "akaush1",
+            "createdBy": "ohall",
             "execOrder": 0,
             "impl": null,
             "isActiveInRelease": false,
@@ -432,7 +432,7 @@
             "ciState": "default",
             "comments": "",
             "created": 1392336208025,
-            "createdBy": "akaush1",
+            "createdBy": "ohall",
             "execOrder": 0,
             "impl": null,
             "isActiveInRelease": false,
@@ -494,7 +494,7 @@
             "ciState": "default",
             "comments": "",
             "created": 1398385274776,
-            "createdBy": "klohia",
+            "createdBy": "ohall",
             "execOrder": 0,
             "impl": null,
             "isActiveInRelease": false,
