--- a/apiresponses/CorpOrg/assemblies/landline/transition/environments/prod/releases.json
+++ b/apiresponses/CorpOrg/assemblies/landline/transition/environments/prod/releases.json
@@ -3971,8 +3971,8 @@
         "revision":1,
         "ciRfcCount":0,
         "releaseState":"closed",
-        "createdBy":"sshar43",
-        "commitedBy":"sshar43",
+        "createdBy":"ohall",
+        "commitedBy":"ohall",
         "created":1404123596417,
         "releaseStateId":200,
         "releaseId":29555122
@@ -3989,8 +3989,8 @@
         "revision":1,
         "ciRfcCount":0,
         "releaseState":"closed",
-        "createdBy":"sshar43",
-        "commitedBy":"sshar43",
+        "createdBy":"ohall",
+        "commitedBy":"ohall",
         "created":1404104251013,
         "releaseStateId":200,
         "releaseId":29527298
@@ -4007,8 +4007,8 @@
         "revision":1,
         "ciRfcCount":0,
         "releaseState":"closed",
-        "createdBy":"sshar43",
-        "commitedBy":"sshar43",
+        "createdBy":"ohall",
+        "commitedBy":"ohall",
         "created":1404104106503,
         "releaseStateId":200,
         "releaseId":29517425
@@ -5177,8 +5177,8 @@
         "revision":1,
         "ciRfcCount":0,
         "releaseState":"closed",
-        "createdBy":"akaush1",
-        "commitedBy":"akaush1",
+        "createdBy":"ohall",
+        "commitedBy":"ohall",
         "created":1400178430740,
         "releaseStateId":200,
         "releaseId":18191132
