--- a/apiresponses/CorpOrg/assemblies/salamander/transition/environments/prod/platforms/app.json
+++ b/apiresponses/CorpOrg/assemblies/salamander/transition/environments/prod/platforms/app.json
@@ -63,7 +63,7 @@
         "ciState": "default",
         "comments": "",
         "created": 1391822686447,
-        "createdBy": "akaush1",
+        "createdBy": "ohall",
         "execOrder": 0,
         "impl": null,
         "isActiveInRelease": false,
@@ -128,7 +128,7 @@
         "ciState": "default",
         "comments": "",
         "created": 1392336208025,
-        "createdBy": "akaush1",
+        "createdBy": "ohall",
         "execOrder": 0,
         "impl": null,
         "isActiveInRelease": false,
@@ -193,7 +193,7 @@
         "ciState": "default",
         "comments": "",
         "created": 1398385033043,
-        "createdBy": "klohia",
+        "createdBy": "ohall",
         "execOrder": 0,
         "impl": null,
         "isActiveInRelease": false,
@@ -258,7 +258,7 @@
         "ciState": "default",
         "comments": "",
         "created": 1398385274776,
-        "createdBy": "klohia",
+        "createdBy": "ohall",
         "execOrder": 0,
         "impl": null,
         "isActiveInRelease": false,
@@ -323,7 +323,7 @@
         "ciState": "default",
         "comments": "",
         "created": 1391823273684,
-        "createdBy": "akaush1",
+        "createdBy": "ohall",
         "execOrder": 0,
         "impl": null,
         "isActiveInRelease": false,
@@ -388,7 +388,7 @@
         "ciState": "default",
         "comments": "",
         "created": 1392336608778,
-        "createdBy": "akaush1",
+        "createdBy": "ohall",
         "execOrder": 0,
         "impl": null,
         "isActiveInRelease": false,
@@ -453,7 +453,7 @@
         "ciState": "default",
         "comments": "",
         "created": 1398384240392,
-        "createdBy": "klohia",
+        "createdBy": "ohall",
         "execOrder": 0,
         "impl": null,
         "isActiveInRelease": false,
@@ -518,7 +518,7 @@
         "ciState": "default",
         "comments": "",
         "created": 1398384830653,
-        "createdBy": "klohia",
+        "createdBy": "ohall",
         "execOrder": 0,
         "impl": null,
         "isActiveInRelease": false,
