--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A mock OneOps API serving static JSON",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js",
-    "serve": "node app.js"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
